# BAS_System

./: .gitignore  .gitmodules  README.md  check_finger.cpp  enrollment.cpp  search_finger.py
BAS_System/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
BAS_System/src/: index.html
BAS_System/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  http.service.ts
BAS_System/src/app/employee/: employee.component.css  employee.component.html  employee.component.ts
BAS_System/src/app/employee/interfaces/: employee.ts
BAS_System/src/app/footer/: footer.component.css  footer.component.html
BAS_System/src/app/header/: header.component.css  header.component.html  header.component.ts
BAS_System/src/app/home/: home.component.css  home.component.html
BAS_System/src/app/register/: register.component.css  register.component.html  register.component.ts
BAS_System/src/app/toolbar/: toolbar.component.css  toolbar.component.html  toolbar.component.ts
BAS_System/src/assets/: data.json
pico-projects/: CMakeLists.txt  FreeRTOSConfig.h  blink_led.c  main.c  multicore.c
